--- a/module7.html
+++ b/module7.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="css7/styles.css">
+    <link rel="stylesheet" href="css7/fonts.css">
 
 </head>
 <body>
@@ -32,17 +32,17 @@
  <div class="services-cards">
      <div class="cards">
      <div class="services">
-         <img src="./img/Icon-Basket1.png">
+         <img src="img7/Icon-Basket1.png">
          <h3 class="service-name">E-Commerce</h3>
          <p class="description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
      </div>
      <div class="services">
-            <img src="./img/Icon-Laptop.png">
+            <img src="img7/Icon-Laptop.png">
             <h3 class="service-name">Responsive Web</h3>
             <p class="description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
         </div>
     <div class="services">
-         <img src="./img/Icon-Locked.png">
+         <img src="img7/Icon-Locked.png">
          <h3 class="service-name">Web Security</h3>
          <p class="description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
      </div>
